--- a/src/MySignalR/Views/Home/Admin.cshtml
+++ b/src/MySignalR/Views/Home/Admin.cshtml
@@ -2,8 +2,13 @@
     ViewBag.Title = "Home Page";
 }
 
-<script src="http://code.jquery.com/jquery-2.1.4.js"></script>
-<script src="http://ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.2.0.js"></script>
+@*<script src="http://code.jquery.com/jquery-2.1.4.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.2.0.js"></script>*@
+
+<script src="~/scripts/jquery-2.1.1.min.js"></script>
+<script src="~/scripts/jquery.signalr-2.1.2.min.js"></script>
+
+
 <script src="@Url.Content("~/signalr/hubs")"></script>
 <script src="~/scripts/angular.js"></script>
 
